--- a/style.css
+++ b/style.css
@@ -518,3 +518,249 @@ display: none;
         width: 100%;
     }
 }
+
+@media (max-width: 360px){
+    *{
+        padding: 0;
+        margin: 0;
+        box-sizing: border-box;
+        list-style: none;
+        text-decoration: none;
+        color: hsl(0, 0%, 8%);
+    }
+    .snap-nav-bar {
+        width: 100%;
+    }
+
+    .hamburger {
+        display: block;
+        cursor: pointer;
+        
+        position: relative;
+        left: 22%;
+        /* visibility: visible; */
+    }
+
+    .remodel {
+        flex-direction: column;
+        width: 100%;
+        min-width: 100px;
+        border: none;
+        margin: 2.5em;
+    }
+
+    .registration {
+        flex-direction: column;
+        height: 20vh;
+        width: 100%;
+        min-width: 100px;
+        text-align: center;
+        justify-content: center;
+
+        position: relative;
+        right: -70%;
+    }
+
+    
+    .register {
+        width: 100%;
+        min-width: 100px;
+        padding: 0;
+        text-align: center;
+        display: grid;
+        place-items: center;
+        margin-bottom: 30%;
+    }
+    .login {
+        width: 100%;
+        min-width: 100px;
+        padding: 0;
+        text-align: center;
+        display: grid;
+        place-items: center;
+        padding: 1em;
+    }
+ 
+
+    .nav-links {
+        margin: auto;
+        min-width: 175px;
+        width: 70%;
+        min-height: 100vh;
+        position: absolute;
+        left: -600%;
+        top: 0;
+        /* background: rgba(0, 0, 0, 0.9); */
+        background: rgba(80,0,0,0.9);
+        color: grey;
+        display: block;
+        flex-direction: column;
+        justify-content: start;
+        z-index: 999;
+        text-align: left;
+
+        display: none;
+    }
+
+    
+
+    .logo {
+        width: auto;
+
+        position: relative;
+        right: 25%;
+        top: 2.5%;
+    }
+
+    .drpdwn-nav1,
+    .careers,
+    .about {
+        padding-right: 0;
+    }
+
+    .drpdwn-content {
+        display: none;
+        min-height: 25vh;
+        min-width: 120px;
+        position: static;
+        left: 0;
+        top: 0;
+        background-color: transparent;
+      }
+    .drpdwn-content2 {
+        min-height: 25vh;
+        min-width: 15vw;
+        display: none;
+        position: static;
+        left: 0;
+        top: 0;
+        background-color: transparent;
+    }
+
+    .careers,.about {
+      padding-bottom: 1.5em;
+    }
+    
+    .feature,.company {
+      padding-bottom: 20px;
+    }
+
+    .reg {
+      height: 5vh;
+      width: 12vw;
+      min-width: 100px;
+  
+      border: 1px solid white;
+  
+      display: grid;
+      justify-content: center;
+      /* flex-direction: column; */
+  
+      border-radius: 20px;
+    }
+    .close-nav {
+      display: none;
+      position: absolute;
+      left: 90%;
+      top: 2%;
+      z-index: 2000;
+      /* color: red; */
+    }
+   
+    .open-mobile-nav {
+      left: 55%;
+    }
+    .drpdwn-nav2 {
+      padding: 2em;
+    }
+    .dropdownFeat {
+      display: block;
+    }
+
+    .hero_section{
+        margin: auto;
+
+        width: 100%;
+        height: 89vh;
+        /* border: 1px solid black; */
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .section_A {
+        margin-top: 104%;
+        height: 65vh;
+        width: 100%;
+        /* border: 1px solid black; */
+        margin-left: 0%;
+    }
+    
+    .section_B {
+        
+        height: 50vh;
+        width: 100%;
+        /* border: 1px solid black; */
+        
+        background-image: url("./images/image-hero-mobile.png");
+        background-size: cover;
+    
+        position: relative;
+        left: 0;
+        right: 0;
+        bottom: 153%;
+
+    }
+
+    .topic {
+        margin-top: 10%;
+        padding-top: 7%;
+        
+        padding-bottom: 25px;
+        width: 100%;
+        font-size: 18px;
+        font-family: 'Epilogue', sans-serif;
+        
+        color: hsl(0, 0%, 8%);
+        text-align: center;
+    }
+
+    br {
+        display: none;
+    }
+
+    .paragraph {
+        width: 100%;
+        text-align: center;
+        height: auto;
+        font-size: 17px;
+        font-family: 'Epilogue', sans-serif;
+        padding-top: 4%;
+        padding-bottom: 8%;
+        color:hsl(0, 0%, 98%);
+    }
+
+    .learn-div {
+        height: 8vh;
+        width: 40vw;
+        /* border: 1px solid  black; */
+        display: flex;
+        align-items: center;
+        margin-bottom: 9%;
+        position: relative;
+        left: 30%;
+        
+    }
+    
+    .main-footer {
+        width:auto;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        top: 10%;
+    }
+    
+    .icons img{
+        width: 100%;
+    }
+}
