--- a/style.css
+++ b/style.css
@@ -300,63 +300,88 @@ display: none;
 
     .remodel {
         flex-direction: column;
-        width: 100%;
-        min-width: 100px;
+        width: 99%;
+        
         border: none;
         margin: 2.5em;
+        
+
+        position: relative;
+        right: 16%;
+        top: 5%;
+        
+    }
+
+    .drpdwn-nav1,
+    .careers,
+    .about {
+        color: hsl(0, 0%, 41%) !important; 
+        padding-right: 0;
+        font-family: 'Epilogue', sans-serif;
     }
 
     .registration {
         flex-direction: column;
         height: 20vh;
         width: 100%;
-        min-width: 100px;
+        
         text-align: center;
         justify-content: center;
 
         position: relative;
-        right: -70%;
+        left: 0;
+        top: 10%;
     }
 
     
     .register {
         width: 100%;
-        min-width: 100px;
+        
         padding: 0;
         text-align: center;
         display: grid;
         place-items: center;
-        margin-bottom: 30%;
+        margin-bottom: 10%;
+
+        position: relative;
+        right: 0;
+        left: 0;
     }
+
     .login {
         width: 100%;
-        min-width: 100px;
+    
         padding: 0;
         text-align: center;
         display: grid;
         place-items: center;
         padding: 1em;
+
+        position: relative;
+        right: 0;
+        left: 0;
     }
  
 
     .nav-links {
-        margin: auto;
-        min-width: 175px;
-        width: 70%;
-        min-height: 100vh;
+        
+        
+        width: 62%;
+        height: 100vh;
         position: absolute;
+        
         left: -600%;
         top: 0;
+        
+        
         /* background: rgba(0, 0, 0, 0.9); */
-        background: rgba(80,0,0,0.9);
+        background: hsl(0, 0%, 98%);
         color: grey;
         display: block;
         flex-direction: column;
         justify-content: start;
         z-index: 999;
         text-align: left;
-
-        display: none;
     }
 
     
@@ -369,63 +394,133 @@ display: none;
         top: 2.5%;
     }
 
-    .drpdwn-nav1,
-    .careers,
-    .about {
+    .drpdwn-nav1 {
         padding-right: 0;
+        position: relative;
+        right: 0;
+
+        width: 100%;
+    }
+
+    .drpdwn-nav1 a {
+        position: relative;
+        right: 20%;
+    }
+
+    .careers, .about{
+        padding-right: 0;
+        position: relative;
+        right: 0;
+
+        width: 100%;
+    }
+
+    .careers a, .about a{
+        position: relative;
+        left: 10%;
+        
     }
 
     .drpdwn-content {
         display: none;
-        min-height: 25vh;
-        min-width: 120px;
-        position: static;
-        left: 0;
-        top: 0;
-        background-color: transparent;
-      }
+        width: 90%;
+        margin: 5%;
+        position: absolute;
+        left: 0px;
+        top: 50%;
+        background-color: hsl(0, 0%, 98%);
+        z-index: 999;
+        border: none;
+    }
+
     .drpdwn-content2 {
-        min-height: 25vh;
-        min-width: 15vw;
         display: none;
+        width: 90%;
+        margin: 5%;
+        position: absolute;
+        left: 0px;
+        top: 50%;
+        background-color: hsl(0, 0%, 98%);
+        z-index: 999;
+        border: none;
+    }
+    .drpdwn-content li {
+        width: 90%;
+        height: auto;
+        margin: 8px;
+        text-align: left;
+        
+    }
+
+    .drpdwn-content a{
+        width: auto;
+        height: auto;
         position: static;
         left: 0;
         top: 0;
-        background-color: transparent;
+        padding-left: 0;
+        font-family: 'Epilogue', sans-serif;
+    }
+    
+    .drpdwn-content2 li {
+        width: 90%;
+        height: auto;
+        margin: 15px;
+        text-align: left;
+        font-size: 14px;
+        font-family: 'Epilogue', sans-serif;
+    }
+
+    .drpdwn-content2 a{
+        width: auto;
+        height: auto;
+        position: static;
+        left: 0;
+        top: 0;
+        padding-left: 0;
+        font-family: 'Epilogue', sans-serif;
     }
 
     .careers,.about {
-      padding-bottom: 1.5em;
+        padding-top:  1.5em;
+        padding-bottom: 1.5em;
     }
     
     .feature,.company {
-      padding-bottom: 20px;
+      padding-bottom: 10px;
+      width: 100%;
+      height: 10vh;
+      position: relative;
+      left: 0;
+      right: 0;
+      font-family: 'Epilogue', sans-serif;
     }
 
     .reg {
-      height: 5vh;
-      width: 12vw;
-      min-width: 100px;
+      height: 40px;
+      width: 150px;
+      
   
-      border: 1px solid white;
+      border: 2px solid black;
   
       display: grid;
       justify-content: center;
       /* flex-direction: column; */
-  
+      font-family: 'Epilogue', sans-serif;
       border-radius: 20px;
     }
+
     .close-nav {
-      display: none;
+      display: block;
       position: absolute;
-      left: 90%;
+      left: 80%;
       top: 2%;
       z-index: 2000;
       /* color: red; */
     }
    
     .open-mobile-nav {
-      left: 55%;
+      left: 38.0%;
     }
     .drpdwn-nav2 {
       padding: 2em;
@@ -518,6 +613,17 @@ display: none;
     .icons img{
         width: 100%;
     }
+
+    .open-nav{
+        display: block;
+      }
+      /* Js Functionality class */
+      .close-hamburger {
+        display: none;
+      }
+      .reveal-hamburger {
+        display: block;
+      }
 }
 
 @media (max-width: 360px){
