--- a/style.css
+++ b/style.css
@@ -556,7 +556,7 @@ display: none;
         background-image: url("./images/image-hero-mobile.png");
         background-size: cover;
     
-        position: relative;
+        position: fixed;
         left: 0;
         right: 0;
         bottom: 180%;
