--- a/style.css
+++ b/style.css
@@ -276,7 +276,7 @@ display: block;
 display: none;
 }
 
-@media (max-width: 375px), (max-width: 768px) {
+@media only screen and (max-width: 375px), (max-width: 768px) {
     *{
         padding: 0;
         margin: 0;
@@ -407,20 +407,6 @@ display: none;
         right: 20%;
     }
 
-    .careers, .about{
-        padding-right: 0;
-        position: relative;
-        right: 0;
-
-        width: 100%;
-    }
-
-    .careers a, .about a{
-        position: relative;
-        left: 10%;
-        
-    }
-
     .drpdwn-content {
         display: none;
         width: 90%;
@@ -481,9 +467,20 @@ display: none;
         font-family: 'Epilogue', sans-serif;
     }
 
-    .careers,.about {
+    .careers,.about{
+        padding-right: 0;
+        position: relative;
+        right: 0;
+
+        width: 100%;
         padding-top:  1.5em;
         padding-bottom: 1.5em;
+    }
+
+    .careers a, .about a{
+        position: relative;
+        left: 10%;
+        
     }
     
     .feature,.company {
@@ -548,7 +545,6 @@ display: none;
     }
     
     .section_B {
-        
         height: 50vh;
         width: 100%;
         /* border: 1px solid black; */
@@ -556,7 +552,7 @@ display: none;
         background-image: url("./images/image-hero-mobile.png");
         background-size: cover;
     
-        position: fixed;
+        position: relative;
         left: 0;
         right: 0;
         bottom: 180%;
@@ -616,7 +612,7 @@ display: none;
 
     .open-nav{
         display: block;
-      }
+    }
       /* Js Functionality class */
       .close-hamburger {
         display: none;
@@ -626,7 +622,7 @@ display: none;
       }
 }
 
-@media (max-width: 360px){
+@media only screen and  (max-width: 360px) {
     *{
         padding: 0;
         margin: 0;
@@ -635,6 +631,7 @@ display: none;
         text-decoration: none;
         color: hsl(0, 0%, 8%);
     }
+
     .snap-nav-bar {
         width: 100%;
     }
@@ -650,63 +647,85 @@ display: none;
 
     .remodel {
         flex-direction: column;
-        width: 100%;
-        min-width: 100px;
+        width: 99%;
+        
         border: none;
         margin: 2.5em;
+
+        position: relative;
+        right: 17%;
+        top: 5%;
+    }
+    
+    .drpdwn-nav1,
+    .careers,
+    .about {
+        color: hsl(0, 0%, 41%) !important; 
+        padding-right: 0;
+        font-family: 'Epilogue', sans-serif;
     }
 
     .registration {
         flex-direction: column;
         height: 20vh;
         width: 100%;
-        min-width: 100px;
+        
         text-align: center;
         justify-content: center;
 
         position: relative;
-        right: -70%;
+        left: 0;
+        top: 10%;
     }
+
 
     
     .register {
         width: 100%;
-        min-width: 100px;
+        
         padding: 0;
         text-align: center;
         display: grid;
         place-items: center;
-        margin-bottom: 30%;
+        margin-bottom: 10%;
+
+        position: relative;
+        right: 0;
+        left: 0;
     }
+
     .login {
         width: 100%;
-        min-width: 100px;
+    
         padding: 0;
         text-align: center;
         display: grid;
         place-items: center;
         padding: 1em;
+
+        position: relative;
+        right: 0;
+        left: 0;
     }
  
 
     .nav-links {
-        margin: auto;
-        min-width: 175px;
-        width: 70%;
-        min-height: 100vh;
+        width: 62%;
+        height: 100vh;
         position: absolute;
+        
         left: -600%;
         top: 0;
+        
+        
         /* background: rgba(0, 0, 0, 0.9); */
-        background: rgba(80,0,0,0.9);
+        background: hsl(0, 0%, 98%);
         color: grey;
         display: block;
         flex-direction: column;
         justify-content: start;
         z-index: 999;
         text-align: left;
-
-        display: none;
     }
 
     
@@ -719,63 +738,131 @@ display: none;
         top: 2.5%;
     }
 
-    .drpdwn-nav1,
-    .careers,
-    .about {
+    .drpdwn-nav1 {
         padding-right: 0;
+        position: relative;
+        right: 0;
+
+        width: 100%;
     }
+
+    .drpdwn-nav1 a {
+        position: relative;
+        right: 20%;
+    }
+
 
     .drpdwn-content {
         display: none;
-        min-height: 25vh;
-        min-width: 120px;
-        position: static;
-        left: 0;
-        top: 0;
-        background-color: transparent;
-      }
-    .drpdwn-content2 {
-        min-height: 25vh;
-        min-width: 15vw;
-        display: none;
-        position: static;
-        left: 0;
-        top: 0;
-        background-color: transparent;
+        width: 90%;
+        margin: 5%;
+        position: absolute;
+        left: 0px;
+        top: 50%;
+        background-color: hsl(0, 0%, 98%);
+        z-index: 999;
+        border: none;
     }
 
-    .careers,.about {
-      padding-bottom: 1.5em;
+    .drpdwn-content2 {
+        display: none;
+        width: 90%;
+        margin: 5%;
+        position: absolute;
+        left: 0px;
+        top: 50%;
+        background-color: hsl(0, 0%, 98%);
+        z-index: 999;
+        border: none;
+    }
+
+    .drpdwn-content li {
+        width: 90%;
+        height: auto;
+        margin: 8px;
+        text-align: left;
+        
+    }
+
+    .drpdwn-content a{
+        width: auto;
+        height: auto;
+        position: static;
+        left: 0;
+        top: 0;
+        padding-left: 0;
+        font-family: 'Epilogue', sans-serif;
+    }
+    
+    .drpdwn-content2 li {
+        width: 90%;
+        height: auto;
+        margin: 15px;
+        text-align: left;
+        font-size: 14px;
+        font-family: 'Epilogue', sans-serif;
+    }
+
+    .drpdwn-content2 a{
+        width: auto;
+        height: auto;
+        position: static;
+        left: 0;
+        top: 0;
+        padding-left: 0;
+        font-family: 'Epilogue', sans-serif;
+    }
+
+    .careers, .about{
+        padding-right: 0;
+        position: relative;
+        right: 0;
+
+        width: 100%;
+        padding-top:  1.5em;
+        padding-bottom: 1.5em;
+    }
+
+    .careers a, .about a{
+        position: relative;
+        left: 10%; 
     }
     
     .feature,.company {
-      padding-bottom: 20px;
+        padding-bottom: 10px;
+        width: 100%;
+        height: 10vh;
+        position: relative;
+        left: 0;
+        right: 0;
+        font-family: 'Epilogue', sans-serif;
     }
 
     .reg {
-      height: 5vh;
-      width: 12vw;
-      min-width: 100px;
-  
-      border: 1px solid white;
-  
-      display: grid;
-      justify-content: center;
-      /* flex-direction: column; */
-  
-      border-radius: 20px;
+        height: 40px;
+        width: 150px;
+        
+    
+        border: 2px solid black;
+    
+        display: grid;
+        justify-content: center;
+        /* flex-direction: column; */
+        font-family: 'Epilogue', sans-serif;
+        border-radius: 20px;
     }
+  
     .close-nav {
-      display: none;
-      position: absolute;
-      left: 90%;
-      top: 2%;
-      z-index: 2000;
-      /* color: red; */
+        display: block;
+        position: absolute;
+        left: 80%;
+        top: 2%;
+        z-index: 2000;
+        /* color: red; */
     }
-   
+
     .open-mobile-nav {
-      left: 55%;
+      left: 38%;
     }
     .drpdwn-nav2 {
       padding: 2em;
@@ -871,3 +958,7 @@ display: none;
         width: 100%;
     }
 }
+
+
+
+
